finished finding clusters of customers

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2165,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 259,
    "metadata": {
     "collapsed": false
    },
@@ -2187,7 +2187,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2629,6 +2629,39 @@
    "metadata": {},
    "source": [
     "As you can not by taking into account more products clusters start to differ significantly. I hope this informtion will be useful in the next prediction task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int32)"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_preds[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "clust_dict = {cust_prod.index[idx] : cluster for idx,cluster in enumerate(c_preds)}"
    ]
   },
   {
